                       Revision history for DocKnot

5.00 - Not Released

 - Merge spin and spin-rss into this package, making it a full, if highly
   idiosyncratic, static site generator built around a macro language
   called thread.  This adds new commands docknot spin, docknot spin-rss,
   and docknot spin-thread, as well as modules App::DocKnot::Spin and
   several submodules.  DocKnot now depends on Date::Parse (from
   TimeDate), Git::Repository, Image::Size, and Pod::Thread.

 - Support setting distribution.packaging.debian.package along with
   distribution.packaging.debian.personal to specify the package name.  Do
   not generate links to Debian in that case.

 - Ignore configure~ when checking distribution tarballs.

 - Stop generating a developer link to a to-do list by default in thread
   output.  Not all of my packages use a TODO file, so the ones that do
   should explicitly add this to the developer docs list.

4.01 - 2021-02-27

 - DocKnot now supports a global configuration file.  The default location
   is $HOME/.config/docknot/config.yaml, but it honors the XDG environment
   variables.  Currently, this configuration file can be used to set the
   distribution directory and signing PGP key for docknot dist.

 - docknot dist can now optionally sign distribution tarballs with GnuPG
   after they have been generated.  To request signing, use the --pgp-key
   command-line option or set pgp_key in the new global configuration
   file.

 - The -d option to docknot dist is now optional if distdir is set in
   DocKnot's global configuration file.

 - Remove the load_appdata_json helper function from App::DocKnot.  This
   is no longer used now that all DocKnot data is in YAML.

 - Properly import Pod::Usage so that docknot --help works.

 - Correct the REQUIREMENTS sections of the module documentation to
   reflect new dependencies and the removal of a JSON dependency from most
   of DocKnot.
